--- a/css/style.css
+++ b/css/style.css
@@ -84,3 +84,42 @@ input[type="color"],
 .navbar-nav .nav-link.active {
   color: #cc181e;
 }
+
+.btn-danger {
+  --bs-btn-color: #fff;
+  --bs-btn-bg: #cc181e;
+  --bs-btn-border-color: #cc181e;
+  --bs-btn-hover-color: #fff;
+  --bs-btn-hover-bg: #cc181e;
+  --bs-btn-hover-border-color: #cc181e;
+  --bs-btn-focus-shadow-rgb: 225, 83, 97;
+  --bs-btn-active-color: #fff;
+  --bs-btn-active-bg: #cc181e;
+  --bs-btn-active-border-color: #cc181e;
+  --bs-btn-active-shadow: inset 0 3px 5px rgba(0, 0, 0, 0.125);
+  --bs-btn-disabled-color: #fff;
+  --bs-btn-disabled-bg: #cc181e;
+  --bs-btn-disabled-border-color: #cc181e;
+}
+
+.btn-outline-danger {
+  --bs-btn-color: #cc181e;
+  --bs-btn-border-color: #cc181e;
+  --bs-btn-hover-color: #fff;
+  --bs-btn-hover-bg: #cc181e;
+  --bs-btn-hover-border-color: #cc181e;
+  --bs-btn-focus-shadow-rgb: 220, 53, 69;
+  --bs-btn-active-color: #fff;
+  --bs-btn-active-bg: #cc181e;
+  --bs-btn-active-border-color: #cc181e;
+  --bs-btn-active-shadow: inset 0 3px 5px rgba(0, 0, 0, 0.125);
+  --bs-btn-disabled-color: #cc181e;
+  --bs-btn-disabled-bg: transparent;
+  --bs-btn-disabled-border-color: #cc181e;
+  --bs-gradient: none;
+}
+
+/* slick slider */
+.slick-dots {
+  justify-content: flex-start;
+}
