--- a/scss/partials/_utilities.scss
+++ b/scss/partials/_utilities.scss
@@ -65,6 +65,7 @@ $twentyP: 20%;
 .fs-22 {
     font-size: $twentyTwo;
 }
+
 .fs-16 {
     font-size: 16px;
 }
@@ -88,4 +89,116 @@ $twentyP: 20%;
 .fs-40 {
     font-size: $fourty;
 }
+.fs-14 {
+    font-size: 14px;
+}
+
+.muted{
+    color: #6E6E6E;
+}
+.muted-2{
+    color: #707070;
+}
+.bold{
+    font-size: $fontWLG;
+}
+.mons{
+    font-family: $montserrat;
+}
+
+.c-red{
+    color: $red;
+}
+
+// Styling the default Slick dots
+
+.do-dots {
+	display: flex;
+	margin: 0;
+	padding: 1rem 0;
+	list-style-type: none;
+		li {
+			margin: 0 0.45rem;
+            button {
+                display: block;
+                width: 1.5rem;
+                height: .3rem;
+                padding: 0;
+                border: none;
+                border-radius: 10px;
+                background-color: $gray;
+                text-indent: -9999px;
+            }
+		}
+	
+		
+	
+		li.slick-active button {
+			background-color: $white;
+		}
+	
+}
+.work-dots {
+	display: flex;
+    justify-content: center;
+	margin: 0;
+	padding: 1rem 0;
+	list-style-type: none;
+		li {
+			margin: 0 0.45rem;
+            button {
+                display: block;
+                width: 1.5rem;
+                height: .3rem;
+                padding: 0;
+                border: none;
+                border-radius: 10px;
+                border: 1px solid $red;
+                background-color: transparent;
+                text-indent: -9999px;
+            }
+		}
+	
+		
+	
+		li.slick-active button {
+			background-color: $red;
+		}
+	
+}
+
+// .slick-slider-dotss{
+//     position: absolute;
+//     bottom: 0px;
+//     left: 50%;
+//     transform: translateX(-50%);
+//     display: flex;
+
+//     ul {
+//         display: flex;
+//         list-style: none;
+//         margin: 0;
+//         padding: 0;
+
+//         li {
+//             margin: 0 4px;
+//             button {
+//                 background: $gray;
+//                 height: 8px;
+//                 width: 35px;
+//                 overflow: hidden;
+//                 color: $gray;
+//                 border: none;
+//                 border-radius: 4px;
+//             }
+//             &.slick-active {
+//                 button {
+//                     background: $white;
+//                     color: $white;
+//                 }
+//             }
+//         }
+//     }
+
+// }
 
