--- a/css/style.css
+++ b/css/style.css
@@ -145,3 +145,10 @@ input[type="color"],
 .slick-dots {
   justify-content: flex-start;
 }
+
+/* acordion */
+.accordion-button:focus {
+  border-color: #f1f5f4;
+  outline: 0 !important;
+  box-shadow: none;
+}
