--- a/scss/all.scss
+++ b/scss/all.scss
@@ -197,15 +197,6 @@ h6 {
   align-items: stretch;
 }
 
-#carouselExampleCaptions {
-  z-index: -1;
-}
-
-.build {
-  z-index: 1000;
-  margin-top: -50px;
-}
-
 .carousel-indicators {
   bottom: 16%;
 }
@@ -268,6 +259,58 @@ h6 {
   display: inline-block;
 }
 
+.accordion {
+  margin-top: 1rem;
+}
+
+.accordion-item {
+  background-color: #fff;
+  color: $dark3;
+  margin: 1rem 0;
+  border-radius: 5px;
+}
+
+.accordion-item-header {
+  background-color: #f3f3f3;
+  padding: 0.3rem 3rem 0.3rem 1rem;
+  min-height: 3rem;
+  color: grey;
+  font-weight: $fontWSM;
+  display: flex;
+  align-items: center;
+  position: relative;
+  cursor: pointer;
+}
+
+.accordion-item-header::after {
+  content: "\002B";
+  font-size: 1.2rem;
+  position: absolute;
+  right: 1rem;
+  border: 1px solid grey;
+  border-radius: 50%;
+  padding: 0px 8px;
+}
+
+.accordion-item-header.active::after {
+  content: "\2212";
+}
+
+.accordion-item-body {
+  max-height: 0;
+  overflow: hidden;
+  transition: max-height 0.2s ease-out;
+  color: gray;
+  font-size: 14px;
+}
+
+.accordion-item-body-content {
+  padding: 1rem;
+  line-height: 1.5rem;
+  border-top: 1px solid;
+  border-image: linear-gradient(to right, transparent, #34495e, transparent) 1;
+}
+
 // footer
 .footer {
   background: #fcf3f4;
@@ -300,6 +343,11 @@ h6 {
   padding-top: 10px;
 }
 
+.subs-btn:hover {
+  background-color: $red;
+  color: $white;
+}
+
 /*
 **************** responsiveness
 */
@@ -311,9 +359,6 @@ h6 {
   .slide-btn-box {
     display: flex;
     flex-direction: column;
-  }
-  .build {
-    margin-top: -50px;
   }
   .carousel-indicators {
     bottom: 10%;
