--- a/scss/partials/_utilities.scss
+++ b/scss/partials/_utilities.scss
@@ -7,6 +7,9 @@ $dark: #000;
 $dark1: #0e0e0e;
 $dark2: #111111;
 $gray: #707070;
+$lightGray: #6e6e6e;
+$dark3: #3e3e3e;
+$dark4: #9f9f9f;
 $white: #fff;
 $red: #cc181e;
 $light-red: #f15a46;
